@@ -8,6 +8,7 @@ cm4all-beng-proxy (0.6.20) unstable; urgency=low
   * http-cache-memcached: implemented "remove"
   * handler: added FastCGI handler
   * fcgi-client: unref caller pool after socket release
+  * fcgi-client: implemented response headers
 
  --
 
